changed storage tiles skin to percentage for better visualization

--- a/src/main/resources/com/tfg/dashboard_tfg/view/DashboardView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/DashboardView.fxml
@@ -107,11 +107,9 @@
                               GridPane.columnIndex="3"
                               GridPane.rowIndex="0"
                               title="Storage"
-                              description="Total Space"
-                              text=""
                               textSize="BIGGER"
                               animated="true"
-                              skinType="GAUGE"
+                              skinType="PERCENTAGE"
                               unit="\%"
                               decimals="1"
                               minValue="0"
