change memory tiles for better visual

--- a/src/main/resources/com/tfg/dashboard_tfg/view/DashboardView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/DashboardView.fxml
@@ -88,18 +88,16 @@
                               GridPane.columnIndex="2"
                               GridPane.rowIndex="0"
                               title="Memory"
-                              description="RAM Usage"
                               textSize="BIGGER"
                               animated="true"
+                              text="N/A"
+                              valueVisible="false"
                               animationDuration="1000"
                               skinType="CIRCULAR_PROGRESS"
-                              unit="\%"
-                              decimals="1"
                               minValue="0"
                               maxValue="100"
                               barBackgroundColor="rgba(200,200,200,0.1)"
                               threshold="90"
-                              thresholdVisible="true"
                               onMouseClicked="#onclicktile"
                         />
 
