--- a/src/main/resources/com/tfg/dashboard_tfg/view/jellyseerView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/jellyseerView.fxml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.web.*?>
@@ -69,7 +66,8 @@
                     <Tooltip text="Home"/>
                 </tooltip>
             </Button>
-            <TextField fx:id="urlField" promptText="Enter URL (e.g., https://www.example.com)" styleClass="url-field" HBox.hgrow="ALWAYS">
+            <TextField fx:id="urlField" promptText="Enter URL (e.g., https://www.example.com)" styleClass="url-field"
+                       HBox.hgrow="ALWAYS">
                 <HBox.margin>
                     <Insets left="5.0" right="5.0"/>
                 </HBox.margin>
@@ -77,6 +75,15 @@
             <Button fx:id="goButton" defaultButton="true" mnemonicParsing="false" onAction="#handleNavigate"
                     styleClass="go-button" text="Go" style="-fx-background-color: #5e72e4; -fx-text-fill: white;"/>
         </HBox>
+
+        <TilePane fx:id="tilePane" hgap="10" vgap="10" prefColumns="3"
+                  AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
+                  styleClass="tile-box"
+                  VBox.vgrow="NEVER">
+            <Button text="Jellyfin" onAction="#handleTileClick" userData="http://192.168.30.2:8096"/>
+            <Button text="Google" onAction="#handleTileClick" userData="https://www.google.com"/>
+            <Button text="GitHub" onAction="#handleTileClick" userData="https://github.com"/>
+        </TilePane>
 
         <WebView fx:id="webView" prefHeight="600.0" prefWidth="800.0" VBox.vgrow="ALWAYS"/>
 
