--- a/src/main/resources/com/tfg/dashboard_tfg/styles/styles.css
+++ b/src/main/resources/com/tfg/dashboard_tfg/styles/styles.css
@@ -1146,3 +1146,32 @@
 .light-theme .search-field {
      -fx-background-color: #FFFFFF;
 }
+
+
+.dark-theme .tile-box {
+    -fx-padding: 10;
+    -fx-border-radius: 5;
+    -fx-background-color: #2e2e42;
+    -fx-border-color: #3d3d56;
+}
+
+.dark-theme .tile-box .button {
+    -fx-background-color: #5e72e4;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+    -fx-cursor: hand;
+}
+
+.light-theme .tile-box {
+    -fx-padding: 10;
+    -fx-border-radius: 5;
+    -fx-background-color: #f8f9fa;
+    -fx-border-color: #e4e5f0;
+}
+
+.light-theme .tile-box .button {
+    -fx-background-color: #5e72e4;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+    -fx-cursor: hand;
+}
