--- a/src/main/resources/com/tfg/dashboard_tfg/view/sonarrView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/sonarrView.fxml
@@ -48,8 +48,8 @@
                     <Insets top="10" right="10" left="10"/>
                 </padding>
 
-                <TitledPane text="Connection Settings" styleClass="settings-pane">
-                    <VBox spacing="10" styleClass="settings-container">
+                <TitledPane text="Connection Settings">
+                    <VBox spacing="10" >
                         <GridPane fx:id="connectionPane" hgap="10" vgap="10">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="NEVER" minWidth="100"/>
