--- a/src/main/resources/com/tfg/dashboard_tfg/view/jellyFinView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/jellyFinView.fxml
@@ -79,7 +79,8 @@
 
                             <Button fx:id="connectButton" text="Connect"
                                     GridPane.columnIndex="1" GridPane.rowIndex="4"
-                                    styleClass="console-button"/>
+                                    styleClass="console-button"
+                                    onAction="#onConnectBtnClicked"/>
                         </GridPane>
                     </VBox>
                 </TitledPane>
